--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -43,6 +43,13 @@
             <scope>test</scope>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.infinispan/infinispan-jcache -->
+        <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-jcache-remote</artifactId>
+            <version>10.0.0.Final</version>
+        </dependency>
+        
         <!-- For tests -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
