--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.infinispan</groupId>
             <artifactId>infinispan-jcache-remote</artifactId>
-            <version>10.0.0.Final</version>
+            <version>12.1.7.Final</version>
         </dependency>
         
         <!-- For tests -->
@@ -113,6 +113,17 @@
                             <groupId>com.hazelcast</groupId>
                             <artifactId>hazelcast</artifactId>
                             <version>3.12.12</version>
+                            <type>jar</type>
+                        </artifactItem>
+                    </artifactItems>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                </configuration>
+                <configuration>
+                    <artifactItems>
+                        <artifactItem>
+                            <groupId>org.infinispan</groupId>
+                            <artifactId>infinispan-jcache-remote</artifactId>
+                            <version>12.1.7.Final</version>
                             <type>jar</type>
                         </artifactItem>
                     </artifactItems>
