--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -107,7 +107,7 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
+                <!-- <configuration>
                     <artifactItems>
                         <artifactItem>
                             <groupId>com.hazelcast</groupId>
@@ -117,7 +117,7 @@
                         </artifactItem>
                     </artifactItems>
                     <outputDirectory>${project.build.directory}</outputDirectory>
-                </configuration>
+                </configuration> -->
                 <configuration>
                     <artifactItems>
                         <artifactItem>
