--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -103,7 +103,7 @@
                         <id>copy</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>copy</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -127,7 +127,7 @@
                             <type>jar</type>
                         </artifactItem>
                     </artifactItems>
-                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <outputDirectory>${project.build.directory}/infinispan</outputDirectory>
                 </configuration>
             </plugin>
       
