--- a/finish-redis/redisson/pom.xml
+++ b/finish-redis/redisson/pom.xml
@@ -5,9 +5,9 @@
   <version>1.0</version>
   <dependencies>
     <dependency>
-      <groupId>org.infinispan</groupId>
-      <artifactId>infinispan-jcache-remote</artifactId>
-      <version>13.0.1.Final</version>
+       <groupId>org.redisson</groupId>
+       <artifactId>redisson</artifactId>
+       <version>3.16.3</version>
     </dependency>
   </dependencies>
 </project>
