--- a/finish-redis/redisson/pom.xml
+++ b/finish-redis/redisson/pom.xml
@@ -9,5 +9,10 @@
        <artifactId>redisson</artifactId>
        <version>3.16.3</version>
     </dependency>
+    <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-api</artifactId>
+       <version>1.7.30</version>
+    </dependency>
   </dependencies>
 </project>
